# py-weather-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  compose.yml  pyproject.toml
.github/workflows/: build.yml
app/: __init__.py  config.py  database.py  errors.py  forms.py  models.py  routes.py
app/middleware/: __init__.py  logging.py  security.py  services.py  validation.py
app/models/: __init__.py  city.py  weather_code.py  weather_data.py
app/routes/: __init__.py  health.py  weather.py
app/services/: __init__.py  repository.py  weather.py  weather_api.py
app/static/css/: style.css
app/templates/: base.html  index.html
app/templates/errors/: 404.html  500.html
app/templates/macros/: forms.html  weather.html
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: seed.py
tests/: conftest.py  test_e2e.py
