[project]
name = "czech-weather"
version = "0.1.0"
description = "Flask web app displaying weather for Czech cities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "types-requests>=2.32.0",
    "types-wtforms>=3.2.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "flask_wtf"
ignore_missing_imports = true
